Fixed auth0. Authentication is now working.

--- a/Invictus/src/app/Pages/login/login.page.html
+++ b/Invictus/src/app/Pages/login/login.page.html
@@ -1,1 +1,3 @@
-<button (click)="auth.loginWithRedirect()">Login</button>
+<ion-content>
+<ion-button (click)="auth.loginWithRedirect()">Login</ion-button>
+</ion-content>
