--- a/Invictus/src/app/Pages/home/home.page.html
+++ b/Invictus/src/app/Pages/home/home.page.html
@@ -3,6 +3,11 @@
     <ion-buttons slot="start">     
         <ion-icon slot="icon-only" name="log-out-outline"></ion-icon>
     </ion-buttons>
+    <ion-buttons slot="end">
+      <ion-button (click)="logout()">
+        Logout
+      </ion-button>
+    </ion-buttons>
     <ion-title> INVICTUS </ion-title>
   </ion-toolbar>
 </ion-header>
