--- a/Invictus/src/app/Pages/exercises/exercises.page.html
+++ b/Invictus/src/app/Pages/exercises/exercises.page.html
@@ -11,3 +11,27 @@
     </ion-toolbar>
   </ion-header>
 </ion-content>
+
+<ion-tabs>
+  <ion-tab-bar slot="bottom">
+    <ion-tab-button tab="home">
+      <ion-icon name="home-outline"></ion-icon>
+      <ion-label>Home</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="exercises">
+      <ion-icon name="barbell-outline"></ion-icon>
+      <ion-label>Exercises</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="trainer">
+      <ion-icon name="chatbubbles"></ion-icon>
+      <ion-label>Trainer</ion-label>
+    </ion-tab-button>
+
+    
+    <ion-tab-button tab="profile">
+      <ion-icon name="person-outline"></ion-icon>
+      <ion-label>Profile</ion-label>
+    </ion-tab-button>
+  </ion-tab-bar>
