--- a/Invictus/src/app/Pages/home/home.page.html
+++ b/Invictus/src/app/Pages/home/home.page.html
@@ -9,41 +9,52 @@
   </ion-toolbar>
 </ion-header>
 
+<ion-content>
+  <ion-card class="calendar-card">
+    <ion-card-header>
+      <div class="week-number">
+        Week {{ currentWeek }}
+      </div>
+    </ion-card-header>
+    <ion-card-content>
+      <div class="week-days">
+        <div *ngFor="let day of weekDays" class="day" [class.workout-day]="workoutDays.has(day)">
+          {{ day }}
+        </div>
+      </div>
+    </ion-card-content>
+  </ion-card>
 
-<ion-content class="ion-padding">
-  <form (ngSubmit)="saveData()">
-    <ion-item class="ion-margin-bottom">
-      <label for="weight">Weight:</label>
-      <input type="number" id="weight" name="weight" [(ngModel)]="weight">
-    </ion-item>
-    <ion-item>
-      <label for="height">Height:</label>
-      <input type="number" id="height" name="height" [(ngModel)]="height">
-    </ion-item>
-    <ion-button type="submit" expand="block">SAVE</ion-button>
-  </form>
+<div class="timer-container">
+  <div class="timer-display">Workout Time: {{ displayTime }}</div>
+  <button class="start-stop-button" [class.stop]="isWorkoutStarted" (click)="toggleWorkout()">
+    {{ isWorkoutStarted ? 'Stop Workout' : 'Start Workout' }}
+  </button>
+</div>
+
+<!-- Sample Workout Section -->
+<div class="sample-workout" *ngIf="sampleWorkout">
+ 
+  <ion-card class="workout-card">
+    <ion-card-header>
+      {{ sampleWorkout.name }}
+    </ion-card-header>
+    <ion-card-content>
+      <ul>
+        <li *ngFor="let exercise of sampleWorkout.exercises">
+          {{ exercise.name }} - {{ exercise.sets }} sets of {{ exercise.repetitions }} reps
+        </li>
+      </ul>
+    </ion-card-content>
+  </ion-card>
+</div>
+
+ <!-- Overall Workout Time Section -->
+ <div class="overall-workout-time">
+  <h2>Overall Workout Time This Week</h2>
+  <div class="time-display">
+    {{ formatTime(overallWorkoutTime) }}
+  </div>
+</div>
 </ion-content>
 
-<ion-tabs>
-  <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="home">
-      <ion-icon name="home-outline"></ion-icon>
-      <ion-label>Home</ion-label>
-    </ion-tab-button>
-
-    <ion-tab-button tab="exercises">
-      <ion-icon name="barbell-outline"></ion-icon>
-      <ion-label>Exercises</ion-label>
-    </ion-tab-button>
-
-    <ion-tab-button tab="trainer">
-      <ion-icon name="chatbubbles"></ion-icon>
-      <ion-label>Trainer</ion-label>
-    </ion-tab-button>
-
-    
-    <ion-tab-button tab="profile">
-      <ion-icon name="person-outline"></ion-icon>
-      <ion-label>Profile</ion-label>
-    </ion-tab-button>
-  </ion-tab-bar>
