--- a/Invictus/src/app/Pages/trainer/trainer.page.html
+++ b/Invictus/src/app/Pages/trainer/trainer.page.html
@@ -12,26 +12,16 @@
   </ion-header>
 </ion-content>
 
-<ion-tabs>
-  <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="home">
-      <ion-icon name="home-outline"></ion-icon>
-      <ion-label>Home</ion-label>
-    </ion-tab-button>
-
-    <ion-tab-button tab="exercises">
-      <ion-icon name="barbell-outline"></ion-icon>
-      <ion-label>Exercises</ion-label>
-    </ion-tab-button>
-
-    <ion-tab-button tab="trainer">
-      <ion-icon name="chatbubbles"></ion-icon>
-      <ion-label>Trainer</ion-label>
-    </ion-tab-button>
-
-    
-    <ion-tab-button tab="profile">
-      <ion-icon name="person-outline"></ion-icon>
-      <ion-label>Profile</ion-label>
-    </ion-tab-button>
-  </ion-tab-bar>
+<ion-content class="ion-padding">
+  <form (ngSubmit)="saveData()">
+    <ion-item class="ion-margin-bottom">
+      <label for="weight">Weight:</label>
+      <input type="number" id="weight" name="weight" [(ngModel)]="weight">
+    </ion-item>
+    <ion-item>
+      <label for="height">Height:</label>
+      <input type="number" id="height" name="height" [(ngModel)]="height">
+    </ion-item>
+    <ion-button type="submit" expand="block">SAVE</ion-button>
+  </form>
+</ion-content>
