--- a/Invictus/src/app/pages/profile/profile.page.html
+++ b/Invictus/src/app/pages/profile/profile.page.html
@@ -1,20 +1,53 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-buttons slot="end">
+      <ion-button (click)="logout()">
+        <ion-icon slot="icon-only" name="log-out-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
     <ion-title>Profile</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <div class="profile-header">
-    <ion-avatar class="profile-picture">
-      <img [src]="userProfile.picture" alt="Profile Picture">
-    </ion-avatar>
-    <div class="profile-details">
-      <h2>{{ userProfile.name }}</h2>
-      <div class="calendar-container">
-        <!-- Inline calendar HTML or shared component -->
-        <!-- Make sure to bind the required data and methods -->
-      </div>
-    </div>
-  </div>
-</ion-content>
+  <ion-content>
+    <ion-card class="profile-card">
+      <ion-grid>
+        <ion-row>
+          <ion-col size="auto">
+            <ion-avatar class="profile-picture">
+              <img [src]="userProfile.picture" alt="Profile Picture">
+            </ion-avatar>
+          </ion-col>
+          <ion-col>
+            <ion-card-content>
+              <h2>{{ userProfile.name }}</h2>
+              <p>Email: {{ userProfile.email }}</p>
+              <!-- Editable fields for phone, age, and gender -->
+              <ion-item>
+                <ion-label position="floating">Phone Number</ion-label>
+                <ion-input [(ngModel)]="phone" type="tel"></ion-input>
+              </ion-item>
+              <ion-item>
+                <ion-label position="floating">Age</ion-label>
+                <ion-input [(ngModel)]="age" type="number"></ion-input>
+              </ion-item>
+              <ion-item>
+                <ion-label position="floating">Gender</ion-label>
+                <ion-select [(ngModel)]="gender">
+                  <ion-select-option value="male">Male</ion-select-option>
+                  <ion-select-option value="female">Female</ion-select-option>
+                  <ion-select-option value="other">Other</ion-select-option>
+                </ion-select>
+              </ion-item>
+            </ion-card-content>
+          </ion-col>
+        </ion-row>
+        <!-- Save button -->
+        <ion-row>
+          <ion-col>
+            <ion-button expand="block" (click)="saveProfile()">Save Profile</ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-card>
+  </ion-content>
