--- a/Invictus/src/app/pages/profile/profile.page.scss
+++ b/Invictus/src/app/pages/profile/profile.page.scss
@@ -3,26 +3,39 @@
     align-items: center;
     padding: 15px;
   }
+
+  .profile-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 15px;
+    padding: 15px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); // Optional shadow for depth
+  }
   
   .profile-picture {
-    margin-right: 15px;
-  }
+    --border-radius: 50%;
+    margin: 0 auto; // Centers the avatar if the column is auto-sized
+  }  
   
   .profile-details {
     flex: 1;
     h2 {
       margin-bottom: 5px;
     }
-    .calendar-container {
-      display: flex;
-      flex-direction: column;
-      // Add calendar styles here, you can reuse styles from home.page.scss
-      .week-number {
-        // Your styles...
-      }
-      .week-days {
-        // Your styles...
-      }
+  }
+
+  ion-card-content {
+    h2 {
+      font-size: 1.5em;
+      font-weight: bold;
+      margin-bottom: 0.5em;
+    }
+  
+    p {
+      font-size: 1em;
+      color: #666; // A softer color for the email text
     }
   }
   
