Added more input fields in Trainer, added a workout plan section in profile page

--- a/Invictus/src/app/pages/profile/profile.page.scss
+++ b/Invictus/src/app/pages/profile/profile.page.scss
@@ -38,4 +38,21 @@
       color: #666; // A softer color for the email text
     }
   }
+
+  .workout-plan {
+    ion-card-title {
+      text-align: center;
+      font-size: 1.2rem;
+      font-weight: bold;
+    }
+  
+    ion-item-divider {
+      --background: #ddd; // Use a distinct background for day dividers
+      --padding-start: 10px; // Adjust padding as needed
+    }
+  
+    ion-label {
+      font-size: 1rem;
+    }
+  }
   
