--- a/Invictus/src/app/pages/profile/profile.page.html
+++ b/Invictus/src/app/pages/profile/profile.page.html
@@ -50,4 +50,25 @@
         </ion-row>
       </ion-grid>
     </ion-card>
+
+
+    <ion-card class="workout-plan">
+      <ion-card-header>
+        <ion-card-title>Workout Plan</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        <ion-list lines="none">
+          <div *ngFor="let day of workoutPlan">
+            <ion-item-group>
+              <ion-item-divider>
+                <ion-label>{{ day.day }}</ion-label>
+              </ion-item-divider>
+              <ion-item *ngFor="let exercise of day.exercises">
+                <ion-label>{{ exercise }}</ion-label>
+              </ion-item>
+            </ion-item-group>
+          </div>
+        </ion-list>
+      </ion-card-content>
+    </ion-card>
   </ion-content>
