--- a/Invictus/src/app/pages/login/login.page.html
+++ b/Invictus/src/app/pages/login/login.page.html
@@ -1,3 +1,5 @@
 <ion-content>
-<ion-button (click)="auth.loginWithRedirect()">Login</ion-button>
-</ion-content>
+    <div style="display: flex; justify-content: center; align-items: center; height: 100%;">
+      <ion-button (click)="auth.loginWithRedirect()">Login</ion-button>
+    </div>
+  </ion-content>
