--- a/Invictus/src/app/pages/trainer/trainer.page.html
+++ b/Invictus/src/app/pages/trainer/trainer.page.html
@@ -33,6 +33,25 @@
             <ion-select-option value="other">Other</ion-select-option>
           </ion-select>
         </ion-item>
+        <ion-item>
+          <ion-label position="stacked">Goal</ion-label>
+          <ion-select [(ngModel)]="goal" name="goal" interface="popover" placeholder="Select One">
+            <ion-select-option value="loseWeight">Lose Weight</ion-select-option>
+            <ion-select-option value="gainMuscle">Gain Muscle</ion-select-option>
+          </ion-select>
+        </ion-item>
+        <ion-item>
+          <ion-label position="stacked">Fitness Level</ion-label>
+          <ion-select [(ngModel)]="fitnessLevel" name="fitnessLevel" interface="popover" placeholder="Select One">
+            <ion-select-option value="beginner">Beginner</ion-select-option>
+            <ion-select-option value="intermediate">Intermediate</ion-select-option>
+            <ion-select-option value="advanced">Advanced</ion-select-option>
+          </ion-select>
+        </ion-item>
+        <ion-item>
+          <ion-label position="stacked">Workout Days (per week)</ion-label>
+          <ion-input type="number" [(ngModel)]="workoutDays" name="workoutDays" required></ion-input>
+        </ion-item>
       </ion-list>
       <ion-button type="submit" expand="block" class="ion-margin-top">Save</ion-button>
     </form>
