--- a/Invictus/src/app/pages/trainer/trainer.page.html
+++ b/Invictus/src/app/pages/trainer/trainer.page.html
@@ -27,7 +27,7 @@
         </ion-item>
         <ion-item>
           <ion-label position="stacked">Gender</ion-label>
-          <ion-select [(ngModel)]="gender" name="gender" interface="popover" placeholder="Select One">
+          <ion-select [(ngModel)]="gender" name="gender" interface="popover" placeholder="Select One" required>
             <ion-select-option value="male">Male</ion-select-option>
             <ion-select-option value="female">Female</ion-select-option>
             <ion-select-option value="other">Other</ion-select-option>
@@ -35,14 +35,14 @@
         </ion-item>
         <ion-item>
           <ion-label position="stacked">Goal</ion-label>
-          <ion-select [(ngModel)]="goal" name="goal" interface="popover" placeholder="Select One">
+          <ion-select [(ngModel)]="goal" name="goal" interface="popover" placeholder="Select One" required>
             <ion-select-option value="loseWeight">Lose Weight</ion-select-option>
             <ion-select-option value="gainMuscle">Gain Muscle</ion-select-option>
           </ion-select>
         </ion-item>
         <ion-item>
           <ion-label position="stacked">Fitness Level</ion-label>
-          <ion-select [(ngModel)]="fitnessLevel" name="fitnessLevel" interface="popover" placeholder="Select One">
+          <ion-select [(ngModel)]="fitnessLevel" name="fitnessLevel" interface="popover" placeholder="Select One" required>
             <ion-select-option value="beginner">Beginner</ion-select-option>
             <ion-select-option value="intermediate">Intermediate</ion-select-option>
             <ion-select-option value="advanced">Advanced</ion-select-option>
@@ -50,7 +50,11 @@
         </ion-item>
         <ion-item>
           <ion-label position="stacked">Workout Days (per week)</ion-label>
-          <ion-input type="number" [(ngModel)]="workoutDays" name="workoutDays" required></ion-input>
+          <ion-select [(ngModel)]="workoutDays" name="workoutDays" interface="popover" placeholder="Select One" required>
+            <ion-select-option value="1">1</ion-select-option>
+            <ion-select-option value="2">2</ion-select-option>
+            <ion-select-option value="3">3</ion-select-option>
+          </ion-select>
         </ion-item>
       </ion-list>
       <ion-button type="submit" expand="block" class="ion-margin-top">Save</ion-button>
