Created a service to store the workout plans so to display it in the Home Page, relative to the day the user is on in their workout. It will also allow the user to tick each exercise, and by completing each exercise will mark the day done in their profile page workout plan. Changes needed: update the ionic storage so that it holds the current day and the progression

--- a/Invictus/src/app/pages/home/home.page.html
+++ b/Invictus/src/app/pages/home/home.page.html
@@ -49,6 +49,22 @@
   </ion-card>
 </div>
 
+<div *ngIf="todaysWorkout$ | async as todaysWorkout">
+  <ion-card class="workout-card">
+    <ion-card-header>
+      Day {{ currentDayIndex$ | async }} Workout
+    </ion-card-header>
+    <ion-card-content>
+      <ul>
+        <li *ngFor="let exercise of todaysWorkout.Exercises; let i = index" (click)="toggleExerciseCompletion(i)">
+          {{ exercise.Title }} - {{ exercise.Sets }} sets of {{ exercise.Repetitions }} reps
+          <ion-icon name="checkmark-done" *ngIf="exercise.isCompleted"></ion-icon>
+        </li>
+      </ul>
+    </ion-card-content>
+  </ion-card>
+</div>
+
  <!-- Overall Workout Time Section -->
  <div class="overall-workout-time">
   <h2>Overall Workout Time This Week</h2>
