Added error handling for the workout.service. Still does not display on the Home Page even though it correctly fetches the data. Could be an issue with the observable and the subscriber not emiitting data or possibly the data structure is incorrect

--- a/Invictus/src/app/pages/home/home.page.html
+++ b/Invictus/src/app/pages/home/home.page.html
@@ -43,7 +43,7 @@
           <ion-card-content>
             <ul>
               <li *ngFor="let exercise of todaysWorkout.Exercises; let i = index" (click)="toggleExerciseCompletion(i)">
-                {{ exercise.Title }} - {{ exercise.Sets }} sets of {{ exercise.Repetitions }} reps
+                {{ exercise.Title }} 
                 <ion-icon name="checkmark-circle" *ngIf="exercise.isCompleted"></ion-icon>
               </li>
             </ul>
