Updated python script, split the create_workout_plan function because the Gain Muscle and Lose Weight goals have different paramaters, as lose weight doesnt focus on body muscles but calories and body fat in general

--- a/Invictus/src/app/pages/trainer/trainer.page.html
+++ b/Invictus/src/app/pages/trainer/trainer.page.html
@@ -58,6 +58,9 @@
         </ion-item>
       </ion-list>
       <ion-button type="submit" expand="block" class="ion-margin-top">Save</ion-button>
+      <ion-button type="button" (click)="createWorkoutPlan()" expand="block" class="ion-margin-top">
+        Create Workout Plan
+      </ion-button>
     </form>
   </div>
 </ion-content>
