--- a/Invictus/src/app/pages/home/home.page.scss
+++ b/Invictus/src/app/pages/home/home.page.scss
@@ -41,7 +41,7 @@
 
 .week-days {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   padding: 10px;
   margin: 10px 0;
   background-color: #f2f2f2;
@@ -50,7 +50,9 @@
 }
 
 .day {
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   padding: 5px;
   border-radius: 50%;
   width: 30px;
