Updated home page weekday calendar for the workoutDays to be reset only at the start of the week

--- a/Invictus/src/app/pages/home/home.page.scss
+++ b/Invictus/src/app/pages/home/home.page.scss
@@ -63,7 +63,7 @@
 }
 
 .workout-day {
-  color: #4CAF50; // Green text color for workout days
+  color: #4CAF50; /* Green background for workout days */
 }
 
 .timer-container {
