Added bootstrap design to home page

--- a/Invictus/src/app/pages/home/home.page.html
+++ b/Invictus/src/app/pages/home/home.page.html
@@ -76,16 +76,14 @@
 
    
    <!-- Overall Workout Time Section in a card -->
-  <ion-card class="overall-workout-time-card">
+   <ion-card class="overall-workout-time-card">
     <ion-card-header>
       <ion-card-title>Overall Workout Time This Week</ion-card-title>
     </ion-card-header>
-    <ion-card-content>
-      <div class="time-display">
+    <ion-card-content class="overall-time-content">
+      <div class="overall-timer-display">
         {{ formatTime(overallWorkoutTime) }}
       </div>
     </ion-card-content>
   </ion-card>
-
-
 </ion-content>
