--- a/Invictus/src/app/pages/login/login.page.html
+++ b/Invictus/src/app/pages/login/login.page.html
@@ -1,7 +1,7 @@
 <ion-content class="ion-padding">
   <div class="login-container">
     <div class="login-header">
-      <img src="assets/invictus-logo.png" alt="Invictus Logo" class="logo">
+      <img src="assets/invictus-logo4.png" alt="Invictus Logo" class="logo">
       <h2 class="brand-title">Personalised Training</h2>
     </div>
     <div class="login-body">
